<resources>
    <string name="app_name">Suits_LB</string>
    <string name="personalizedTitle">SUITS LB</string>
    <string name="tvwemail">Email</string>
    <string name="tvwpassword">Password</string>
    <string name="tvwAskinglogin">¿No tienes cuenta?</string>
    <string name="tvwLinkToSILogin">Pulse aqui para crear una</string>
    <string name="btLogin">Iniciar sesion</string>
    <string name="cancelSignIn">Cancelar</string>
    <string name="btSignIn">Registrarse</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_home_app">HomeApp</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="google_maps_key">AIzaSyBrQB_msWOKvvBlU_ZtC5j1vU4o4VWHbjk</string>
    <string name="privacyPoliticsValue">Las condiciones de uso de SUITS LB tienen como objetivo principal garantizar una experiencia segura y satisfactoria para todos los usuarios.Al descargar y utilizar nuestra aplicación, el usuario acepta cumplir con los términos y condiciones establecidos. Estos incluyen el uso responsable de la plataforma, la veracidad de la información proporcionada al registrarse y la prohibición de actividades fraudulentas o ilícitas. Nos reservamos el derecho de suspender o cancelar cuentas que infrinjan estas normas, a fin de proteger la integridad de nuestra comunidad y la seguridad de las transacciones. Además, nuestra aplicación se compromete a proteger la privacidad de los datos personales de los usuarios. SUITS LB recopila información necesaria para ofrecer un servicio personalizado y eficiente, como datos de contacto, preferencias de estilo y detalles de pago. Esta información es tratada de acuerdo con nuestra política de privacidad y no será compartida con terceros sin el consentimiento explícito del usuario, salvo en casos donde la ley lo requiera. Los usuarios pueden acceder, modificar o eliminar su información personal a través de la configuración de su cuenta en cualquier momento. Por último, SUITS LB se esfuerza por mantener la aplicación actualizada y funcional, pero no se responsabiliza por posibles interrupciones del servicio o errores técnicos. Recomendamos a los usuarios mantener la aplicación actualizada a la última versión para asegurar el mejor rendimiento y acceso a nuevas funcionalidades. Asimismo, nos reservamos el derecho de modificar estas condiciones de uso en cualquier momento, notificando a los usuarios sobre cualquier cambio significativo a través de la aplicación o por correo electrónico. El uso continuado de la aplicación después de tales modificaciones constituirá la aceptación de las nuevas condiciones.</string>

</resources>